--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "moment": "^2.29.1",
     "ra-data-json-server": "^3.12.1",
     "ra-i18n-polyglot": "^3.12.1",
     "ra-language-french": "^3.12.1",
     "react": "^17.0.1",
     "react-admin": "^3.12.1",
+    "react-admin-color-input": "^3.0.0-beta.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.0.1"
