--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "moment": "^2.29.1",
+    "notistack": "^1.0.5",
     "ra-data-json-server": "^3.12.1",
     "ra-i18n-polyglot": "^3.12.1",
     "ra-language-french": "^3.12.1",
@@ -15,6 +17,7 @@
     "react-admin-color-input": "^3.0.0-beta.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "socket.io-client": "^4.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
