--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-admin": "^3.12.1",
     "react-admin-color-input": "^3.0.0-beta.0",
     "react-dom": "^17.0.1",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.2",
     "socket.io-client": "^4.0.1",
     "web-vitals": "^1.0.1"
